# RTEC-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  pyproject.toml
agent/: CLAUDE.md  README.md  __init__.py  cli.py  config.py  pyproject.toml  thinking.txt
agent/apps/maritime/: auxiliary  config.yaml  vocabulary.yaml
agent/apps/toy/: config.yaml  expert_rules.prolog  input_stream.csv  vocabulary.yaml
agent/apps/toy/auxiliary/: var_domain.prolog
agent/apps/voting/: config.yaml  vocabulary.yaml
agent/core/: __init__.py  agent.py  convergence.py  feedback.py  observability.py  qa_agent.py  schemas.py  session.py
agent/logs/kimi/: generated_rules.prolog
agent/prompts/: incremental_session.md  qa_system.md  syntax.md  system.md  translate_system.md
agent/tools/: __init__.py  compile.py  evaluate.py  execute.py  inspect.py  registry.py  translate.py
agent/ui/: __init__.py  session_app.py
docs/: ARCHITECTURE.md  ENGINE_NOTES.md  requirements.md
docs/visualization/: index.html
resources/: ~$llms.docx
rtec_llm/: __init__.py  cli.py  types.py
rtec_llm/adapters/: __init__.py
rtec_llm/adapters/engine/: __init__.py  rtec_subprocess.py
rtec_llm/adapters/llm/: __init__.py  openai_provider.py
rtec_llm/adapters/scoring/: __init__.py  rtec_scoring.py
rtec_llm/domain/: __init__.py  har.yaml  loader.py  msa.yaml  spec.py
rtec_llm/evaluation/: __init__.py  evaluators.py
rtec_llm/fixtures/: __init__.py  check.py  loader.py  schema.py  validate.py
rtec_llm/fixtures/data/msa/: highSpeedNearCoast.gt.txt  highSpeedNearCoast.yaml  loitering.gt.txt  loitering.yaml  rendezVous.gt.txt  rendezVous.yaml  withinArea.gt.txt  withinArea.yaml
rtec_llm/generation/: __init__.py  generator.py  grounding.py  prompts.py
rtec_llm/ports/: __init__.py  engine.py  llm.py  scoring.py
rtec_llm/query/: __init__.py  translator.py
rtec_llm/repair/: __init__.py  feedback.py  graph.py  orchestrator.py  state.py
scripts/: seed_maritime_fixtures.py
tests/: test_domain_fixtures.py  test_engine_smoke.py  test_scoring.py
