[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtec-llm"
version = "0.1.0"
description = "AI layer over RTEC: NL-to-rule generation and NL-to-query answering with execution-guided iterative self-repair."
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "George" }]
# Core's only runtime dep is a YAML parser for the domain/fixture loaders
# (domain/*.yaml vocabularies + fixture specs). Adapters add their own:
#   adapters/engine    -> only stdlib + subprocess (wraps run_rtec.sh)
#   adapters/scoring   -> only stdlib (wraps execution scripts/scoring/utilities/)
#   adapters/llm/*     -> openai, anthropic, google-generativeai, etc. (added in later phase)
#   repair/graph.py    -> langgraph (added in later phase)
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
# LLM providers go through the multi-provider factory (CLAUDE.md §6). OpenAI
# (GPT-4o) is wired first; add Claude/Gemini/Ollama/GLM extras as those adapters land.
openai = ["openai>=1.40"]
dev = [
  "mypy>=1.11",
  "ruff>=0.6",
  "pytest>=8",
  "pre-commit>=3.7",
  "types-PyYAML",
]

[tool.hatch.build.targets.wheel]
# Package ONLY the AI layer. The legacy RTEC engine ships separately via setup.py
# (see install.sh gotcha in CLAUDE.md) and is treated as read-only by this package.
packages = ["rtec_llm"]

# ---------------------------------------------------------------------------
# Strict mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_return_any = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_reexport = true
files = ["rtec_llm"]

# The engine, examples, and the user's local venv are not part of this package.
# Listed here so a stray `mypy .` from the repo root never reaches them.
exclude = [
  '^build/',
  '^src/',
  '^RTEC2\.egg-info/',
  '^examples/',
  '^execution scripts/',
  '^external/',
  '^\.venv/',
]

# Optional LLM provider SDKs are lazy-imported inside their adapters; treat a
# missing SDK (when its extra is not installed) as a non-error so a base checkout
# type-checks. Installing the extra still type-checks against the real package.
[[tool.mypy.overrides]]
module = ["openai", "openai.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["rtec_llm"]
extend-exclude = [
  "build",
  "src",
  "RTEC2.egg-info",
  "examples",
  "execution scripts",
  "external",
  ".venv",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# __init__.py files are intentionally empty; allow unused re-exports if added later.
"__init__.py" = ["F401"]

[tool.ruff.format]
# Defaults are fine. Format what we lint.
docstring-code-format = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["rtec_llm"]
addopts = "-q"
# Resolve `rtec_llm` from the source tree so tests run without an editable
# install (the engine adapter is stdlib-only). `make smoke-test` passes
# `tests/` explicitly, overriding `testpaths`.
pythonpath = ["."]
